--- a/Bookkeeper-CharGen-JSF/.settings/org.eclipse.wst.common.component
+++ b/Bookkeeper-CharGen-JSF/.settings/org.eclipse.wst.common.component
@@ -3,6 +3,9 @@
 <wb-module deploy-name="Bookkeeper-CharGen-JSF">
 <wb-resource deploy-path="/" source-path="/WebContent"/>
 <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <dependent-module archiveName="Bookkeeper-CharGen-EJB.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Bookkeeper-CharGen-EJB/Bookkeeper-CharGen-EJB">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
 <property name="java-output-path"/>
 <property name="context-root" value="Bookkeeper-CharGen-JSF"/>
 </wb-module>
