--- a/Bookkeeper-CharGen-JSF/.settings/org.eclipse.wst.common.component
+++ b/Bookkeeper-CharGen-JSF/.settings/org.eclipse.wst.common.component
@@ -2,7 +2,7 @@
 <project-modules id="moduleCoreId" project-version="1.5.0">
 <wb-module deploy-name="Bookkeeper-CharGen-JSF">
 <wb-resource deploy-path="/" source-path="/WebContent"/>
-<wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/" source-path="/src"/>
         <dependent-module archiveName="Bookkeeper-CharGen-EJB.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/Bookkeeper-CharGen-EJB/Bookkeeper-CharGen-EJB">
             <dependency-type>uses</dependency-type>
         </dependent-module>
