--- a/Bookkeeper-CharGen-JSF/.settings/org.eclipse.wst.common.component
+++ b/Bookkeeper-CharGen-JSF/.settings/org.eclipse.wst.common.component
@@ -69,6 +69,12 @@
         <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/Bookkeeper-CharGen-JSF/WebContent/WEB-INF/lib/struts.jar">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/Bookkeeper-CharGen-JSF/WebContent/WEB-INF/lib/myfaces-api-1.1.6.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module deploy-path="/WEB-INF/lib" handle="module:/classpath/lib/Bookkeeper-CharGen-JSF/WebContent/WEB-INF/lib/myfaces-impl-1.1.6.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
 <property name="java-output-path"/>
 <property name="context-root" value="Bookkeeper-CharGen-JSF"/>
 </wb-module>
