git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/branches/with_useability@522 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/TimadorusWebApp.css
+++ b/war/TimadorusWebApp.css
@@ -13,3 +13,10 @@
 	border:1px solid #6AF;
 	background:#CEF;
 }
+
+div#content {
+    wigth: 100%;
+    height: 100%;
+    background: #EEE8CD;
+    align: center;
+}
