cleaned up and style changed, repaired objects
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/branches/with_usability@571 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/TimadorusWebApp.css
+++ b/war/TimadorusWebApp.css
@@ -14,19 +14,26 @@
 	background:#CEF;
 }
 
-#menu {
-    background: black;
+body {
+    background: beige;
+}
+
+#menu {  
+	width: 200px;
+	height: 100%;
     float: left;
 }
 
 #content {
+	margin-left: 200px;
+	width: 500px;
+	height: 100%;
     float: left;
+    align: center;
 }
 
 #information {
 	float: right;
-    background: blue;
-    color: white;
     width: 200px;
-    height: 600px;
+    height: 100%;
 }
