new package organisation + background changed to beige
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/branches/with_usability_refactored@642 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/TimadorusWebApp.css
+++ b/war/TimadorusWebApp.css
@@ -19,7 +19,7 @@ body {
 }
 
 #menu {  
-	background: white;
+	background: #EEE8CD;
 	width: 15%;
 	height: 100%;	
     float: left;
@@ -27,7 +27,7 @@ body {
 }
 
 #content {
-	background: blue;
+	background: #FFEFD5;
 	width: 70%;
 	heigth: 100%;
 	
@@ -36,7 +36,7 @@ body {
 }
 
 #information {
-	background: orange;
+	background: #EEE8CD;
     width: 15%;
     heigth: 100%;    
     float: right;    
