lesser style change
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/branches/with_usability_refactored@656 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/TimadorusWebApp.css
+++ b/war/TimadorusWebApp.css
@@ -20,24 +20,23 @@ body {
 
 #menu {  
 	background: #EEE8CD;
-	width: 15%;
-	height: 100%;	
+	width: 15%;		
     float: left;
-    
+    text-align: center;
 }
 
 #content {
 	background: #FFEFD5;
-	width: 70%;
-	heigth: 100%;
-	
+	width: 70%;	
     align: center;
     float: left;
+    text-align: center;
 }
 
 #information {
 	background: #EEE8CD;
     width: 15%;
     heigth: 100%;    
-    float: right;    
+    float: right;
+    text-align: justify;
 }
