--- a/war/TimadorusWebApp.css
+++ b/war/TimadorusWebApp.css
@@ -13,36 +13,39 @@
 	background:#CEF;
 }
 
+.contentPanel {
+	padding: 20px;
+}
+
+
+
+.buttonGrid {
+	text-align: center;
+}
+
+
 body {
     background: red;
 }
 
 #menu {  
 	background: #EEE8CD;
-	width: 15%;		
+	width: 150;
     float: left;
     text-align: center;
 }
 
-.prevButton {
-	width: 200px;
-}
-
-.nextButton {
-	text-align: right;
-}
-
 #content {
 	background: #FFEFD5;
-	width: 70%;	
+	width: 550px;	
     align: center;
     float: left;
     text-align: center;
 }
 #information {
 	background: #EEE8CD;
-    width: 15%;
-    heigth: 100%;    
-    float: right;
+    width: 200px;
+    heigth: 100%;
+    margin-left: 750px; 
     text-align: justify;
 }
