added new "pages" for create character, added pictures
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/branches/with_usability_refactored@707 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/TimadorusWebApp.css
+++ b/war/TimadorusWebApp.css
@@ -2,6 +2,7 @@
 .gwt-PasswordTextBox {
 	width:150px;
 }
+
 .formPanel {
 	margin:5px;
 }
@@ -13,11 +14,16 @@
 	background:#CEF;
 }
 
-.contentPanel {
+.panel {
+	text-align: justify;
 	padding: 20px;
+
 }
 
-.buttonGrid {
+
+.selectGrid {
+	padding-top: 20px;
+	padding-bottom: 30px;	
 	text-align: center;
 }
 
@@ -31,19 +37,28 @@ body {
 	width: 150;
     float: left;
     text-align: center;
+    paddin-top: 20px;
 }
 
 #content {
 	background: #FFEFD5;
 	width: 550px;	
-    align: center;
     float: left;
-    text-align: center;
 }
 #information {
 	background: #EEE8CD;
     width: 200px;
     heigth: 100%;
     margin-left: 750px; 
-    text-align: justify;
+    padding: 10px;    
+}
+
+#information p{
+	
+}
+
+#information h1{
+	font-weight: bold;
+	font-size: medium;
+	text-decoration: underline;
 }
