--- a/war/TimadorusWebApp.css
+++ b/war/TimadorusWebApp.css
@@ -17,7 +17,6 @@
 .panel {
 	text-align: justify;
 	padding: 20px;
-
 }
 
 
@@ -44,6 +43,12 @@ body {
 	background: #FFEFD5;
 	width: 550px;	
     float: left;
+}
+
+#content h1{
+    font-weight: bold;
+    font-size: medium;
+    text-decoration: underline;
 }
 #information {
 	background: #EEE8CD;
