added availableclasses for racepanel
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/branches/with_usability_refactored@755 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/TimadorusWebApp.css
+++ b/war/TimadorusWebApp.css
@@ -50,6 +50,7 @@ body {
     font-size: medium;
     text-decoration: underline;
 }
+
 #information {
 	background: #EEE8CD;
     width: 200px;
@@ -66,4 +67,10 @@ body {
 	font-weight: bold;
 	font-size: medium;
 	text-decoration: underline;
+}
+
+#information h2{
+    font-weight: normal;
+    font-size: medium;
+    text-decoration: underline;
 }
