fixed bugs in selectTempStatsPanel and FINALY fixed bug with centering widgets!!!!
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/branches/with_usability_refactored@793 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/TimadorusWebApp.css
+++ b/war/TimadorusWebApp.css
@@ -2,7 +2,6 @@
 .gwt-PasswordTextBox {
 	width:150px;
 }
-
 .formPanel {
 	margin:5px;
 }
@@ -19,11 +18,18 @@
 	padding: 20px;
 }
 
-
 .selectGrid {
 	padding-top: 20px;
 	padding-bottom: 30px;	
 	text-align: center;
+}
+
+.labelColorRed {
+	color: #FF0000;
+}
+
+.labelColorGreen {
+	color: #00CD00;
 }
 
 
@@ -49,6 +55,11 @@ body {
     font-weight: bold;
     font-size: medium;
     text-decoration: underline;
+}
+
+#content h2{
+	font-size: medium;
+	font-weight: bold;
 }
 
 #information {
