lesser style changes
git-svn-id: svn+ssh://svn.informatik.haw-hamburg.de/srv/svn/timadorus/webapp/branches/with_usability_refactored@795 aa37ab44-2659-0410-8a83-c73d69c9b566

--- a/war/TimadorusWebApp.css
+++ b/war/TimadorusWebApp.css
@@ -32,6 +32,11 @@
 	color: #00CD00;
 }
 
+.underlinedText {
+	font-weight: bold;
+	text-decoration: underline;
+}
+
 body {
     background: red;
 }
